Production/01-02-2025/force-app/main/default/objects/Case/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <label>Assigned Agent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>