Production/01-02-2025/force-app/main/default/objects/Case/fields/Business_Data_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Business_Data_Deleted__c</fullName>
    <label>Business Data Deleted</label>
    <type>Date</type>
</CustomField>