Production/01-02-2025/force-app/main/default/objects/Case/fields/Business_Data_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Business_Data_Opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Data Opt-out</label>
    <type>Checkbox</type>
</CustomField>