Production/01-02-2025/force-app/main/default/objects/Case/fields/Business_Data_Opt_out_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Data_Opt_out_Completed_Date__c</fullName>
    <label>Business Data Opt-out Completed Date</label>
    <type>Date</type>
</CustomField>