Production/01-02-2025/force-app/main/default/objects/Case/fields/Business_Data_Ready_to_Process__c.field-meta.xml
<CustomField>
    <fullName>Business_Data_Ready_to_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Data Ready to Process</label>
    <type>Checkbox</type>
</CustomField>