Production/01-02-2025/force-app/main/default/objects/Case/fields/Closed_No_Response__c.field-meta.xml
<CustomField>
    <fullName>Closed_No_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed No Response</label>
    <type>Checkbox</type>
</CustomField>