Production/01-02-2025/force-app/main/default/objects/Case/fields/Cookie_ID_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cookie_ID_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for Cookie ID and Affidavit</label>
    <type>Checkbox</type>
</CustomField>