Production/01-02-2025/force-app/main/default/objects/Case/fields/Cookie_ID_s_Retrieved_by_Tech__c.field-meta.xml
<CustomField>
    <fullName>Cookie_ID_s_Retrieved_by_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cookie ID(s) Retrieved by Tech</label>
    <type>Checkbox</type>
</CustomField>