Production/01-02-2025/force-app/main/default/objects/Case/fields/Date_DDMMYYYY__c.field-meta.xml
<CustomField>
    <fullName>Date_DDMMYYYY__c</fullName>
    <formula>TEXT(YEAR(TODAY()))

&amp;CASE( 
MONTH( TODAY() ), 
1, &quot;01&quot;, 
2, &quot;02&quot;, 
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;, 
7, &quot;07&quot;, 
8, &quot;08&quot;, 
9, &quot;09&quot;, 
10, &quot;10&quot;, 
11, &quot;11&quot;, 
12, &quot;12&quot;, 
&quot;None&quot; )

&amp;CASE(
DAY(TODAY()),
1, &quot;01&quot;, 
2, &quot;02&quot;, 
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;, 
7, &quot;07&quot;, 
8, &quot;08&quot;, 
9, &quot;09&quot;, 
10, &quot;10&quot;, 
11, &quot;11&quot;, 
12, &quot;12&quot;, 
13, &quot;13&quot;,
14, &quot;14&quot;,
15, &quot;15&quot;,
16, &quot;16&quot;,
17, &quot;17&quot;,
18, &quot;18&quot;,
19, &quot;19&quot;,
20, &quot;20&quot;,
21, &quot;21&quot;,
22, &quot;22&quot;,
23, &quot;23&quot;,
24, &quot;24&quot;,
25, &quot;25&quot;,
26, &quot;26&quot;,
27, &quot;27&quot;,
28, &quot;28&quot;,
29, &quot;29&quot;,
30, &quot;30&quot;,
31, &quot;31&quot;,
&quot;None&quot;)</formula>
    <label>Date (YYYYMMDD)</label>
    <type>Text</type>
</CustomField>