Production/01-02-2025/force-app/main/default/objects/Case/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <formula>CreatedDate +30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>