Production/01-02-2025/force-app/main/default/objects/Case/fields/Link_to_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Ticket__c</fullName>
    <label>Link to Ticket</label>
    <type>Url</type>
</CustomField>