Production/01-02-2025/force-app/main/default/objects/Case/fields/Partner_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>Partner_Request_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Request Received</label>
    <type>Checkbox</type>
</CustomField>