Production/01-02-2025/force-app/main/default/objects/Case/fields/Partner_Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Request_Received_Date__c</fullName>
    <label>Partner Request Received Date</label>
    <type>Date</type>
</CustomField>