Production/01-02-2025/force-app/main/default/objects/Case/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <formula>UPPER(LEFT(Email__c,5)+RIGHT( CaseNumber ,5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Password</label>
    <type>Text</type>
</CustomField>