Production/01-02-2025/force-app/main/default/objects/Case/fields/Pending_2_Follow_up_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pending_2_Follow_up_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending- 2 Follow up Sent</label>
    <type>Checkbox</type>
</CustomField>