Production/01-02-2025/force-app/main/default/objects/Case/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>Lead__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>