Production/01-02-2025/force-app/main/default/objects/Case/fields/Platform_Data_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Platform_Data_Deleted__c</fullName>
    <label>Platform Data Deleted</label>
    <type>Date</type>
</CustomField>