Production/01-02-2025/force-app/main/default/objects/Case/fields/Platform_Data_Report_s_Generated__c.field-meta.xml
<CustomField>
    <fullName>Platform_Data_Report_s_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platform Data Report(s) Generated</label>
    <type>Checkbox</type>
</CustomField>