Production/01-02-2025/force-app/main/default/objects/Case/fields/Request_for_New_Cookie_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_for_New_Cookie_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request for New Cookie ID</label>
    <type>Checkbox</type>
</CustomField>