Production/01-02-2025/force-app/main/default/objects/Case/fields/Request_Submitted_to_Ikura_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_to_Ikura_Cookie__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the consumer&apos;s request been submitted to Ikura based on the consumers cookie they have provided?</description>
    <label>Request Submitted to Ikura - Cookie</label>
    <type>Checkbox</type>
</CustomField>