Production/01-02-2025/force-app/main/default/objects/Case/fields/Request_Submitted_to_Ikura_Email__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_to_Ikura_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the consumer&apos;s request been submitted to Ikura to be processed based on the consumers email?</description>
    <label>Request Submitted to Ikura - Email</label>
    <type>Checkbox</type>
</CustomField>