Production/01-02-2025/force-app/main/default/objects/Case/fields/SAR_Regulation__c.field-meta.xml
<CustomField>
    <fullName>SAR_Regulation__c</fullName>
    <label>SAR Regulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other_/_Generic</fullName>
                <default>true</default>
                <label>Other / Generic</label>
            </value>
            <value>
                <fullName>CCPA_(California,_Colorado,_Connecticut,_Virginia,_Utah,_Nevada_Residents)</fullName>
                <label>CCPA (California, Colorado, Connecticut, Virginia, Utah, Nevada Residents)</label>
            </value>
            <value>
                <fullName>GDRP_(Non_US_Requests)</fullName>
                <label>GDPR (Non US Requests)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>