Production/01-02-2025/force-app/main/default/objects/Case/fields/Send_alert_to_Tech__c.field-meta.xml
<CustomField>
    <fullName>Send_alert_to_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send alert to Tech</label>
    <type>Checkbox</type>
</CustomField>