Production/01-02-2025/force-app/main/default/objects/Case/fields/YouGov_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>YouGov_Reference_Number__c</fullName>
    <formula>IF(CONTAINS(Subject,&quot;Ref : &quot;),RIGHT( Subject ,(LEN( Subject)-FIND(&quot;Ref : &quot;, Subject)-5)),
IF(CONTAINS(Subject,&quot;Ref: &quot;),RIGHT( Subject ,(LEN( Subject)-FIND(&quot;Ref: &quot;, Subject)-4)),
IF(CONTAINS(Subject,&quot;Ref : #&quot;),RIGHT(Subject ,(LEN( Subject)-FIND(&quot;#&quot;, Subject)-6)),
IF(CONTAINS(Subject,&quot;Ref:1&quot;),RIGHT(Subject ,(LEN( Subject)-FIND(&quot;Ref:1&quot;, Subject)-3)),
&quot;&quot;
)
)
)
)</formula>
    <label>YouGov Reference Number</label>
    <type>Text</type>
</CustomField>