Production/01-02-2025/force-app/main/default/objects/Case/recordTypes/Groove_Ticket.recordType-meta.xml
<RecordType>
    <fullName>Groove_Ticket</fullName>
    <active>true</active>
    <businessProcess>Groove Ticket</businessProcess>
    <label>Groove Ticket</label>
</RecordType>