Production/01-02-2025/force-app/main/default/objects/Case/recordTypes/Subject_Access_Request.recordType-meta.xml
<RecordType>
    <fullName>Subject_Access_Request</fullName>
    <active>true</active>
    <businessProcess>Subject Access Request</businessProcess>
    <label>Subject Access Request</label>
</RecordType>