Production/01-02-2025/force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.EMAIL</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Cases</label>
</ListView>